--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ html {
 
 .ad h1 {
   color: #282c34ef;
+  font-family: "Fredoka One";
   font-size: calc(6px + 2vmin);
 }
 
@@ -61,8 +62,21 @@ html {
   color: #282c3498;
 }
 
+.ad h2{color: white}
+
+.img-wrapper{
+border: 4px  solid rgba(0, 0, 0, 0.003);
+border-radius: 12px;
+background-color: rgba(0, 0, 0, 0.078);
+display: flex;
+flex-direction: column;
+align-items: center;
+max-height: 200ch;
+overflow: hidden;
+height: auto;
+margin: 0 12%;
+}
 img {
-  width: 12rem;
 }
 
 .ad p {
@@ -107,10 +121,12 @@ button {
   position: fixed;
   bottom: -1%;
   left: 0px;
+  z-index: -1;
 }
 .footer img {
   height: auto;
   width: 100%;
   filter: sepia(30%);
   max-height: 120px + 1vmin;
+  z-index: -1;
 }
