--- a/src/App.css
+++ b/src/App.css
@@ -132,16 +132,7 @@ button {
   justify-content: center;
   background-color:#5880611f;
   border-radius: 12px;
-  padding:
-
-  
-  /* opacity:0.8; 
-  position:fixed;
-  width:100%;
-  height:100%;
-  top:0px;
-  left:0px;
-  z-index:1000; */
+  padding: 20px;
 }
 
 fieldset {
