--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
-.App,
-html {
+.App,body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif, Geneva, Tahoma, sans-serif;
-  background-color: #fde9ea;
+  background-color: #e7b5acef;
 }
 
 .App-header {
@@ -24,14 +23,42 @@ html {
   font-size: calc(30px + 5vmin);
   font-family: "Fredoka One", cursive;
   color: #588061;
-  margin: 2% 20%;
-  padding: 10px 10px;
-  background-color: #e7b5ac6e;
+  margin: 0% 20%;
+  padding: 100px 10px;
+  background-color: #e7b5ac29;
   border-radius: 12px;
 }
 
 .banner:hover {
   color: #869f77;
+}
+
+.banner-sm {
+  display: flex;
+  justify-content: left;
+  text-align: left;
+  font-weight: 900;
+  min-height: 1vh;
+  font-size: calc(10px + 4vmin);
+  font-family: "Fredoka One", cursive;
+  color: #588061;
+  margin: 2% 0% 0% 20;
+  padding: 0px 1em;
+  background-color: 
+  #e7b5ac;
+  border-bottom: 2px solid #58806141;
+}
+
+.banner-sm:hover {
+  color: #869f77;
+  background-color: 
+  #e7b5acea;
+}
+
+.burger{
+text-align: center;
+font-family: "Fredoka One"
+
 }
 
 .wrapper {
@@ -46,11 +73,11 @@ html {
 .ad {
   margin: 2% auto;
   overflow: hidden;
-  background-color: #e7b5ac;
   border-radius: 1rem;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  border: 2px solid #588061fd;
 }
 .ad a {
   color: inherit;
@@ -58,13 +85,13 @@ html {
 }
 
 .ad h1 {
-  color: #282c34ef;
+  color: #282c34;
   font-family: "Fredoka One";
-  font-weight: 100;
+  font-weight: 900;
+  padding: 1em;
+  background-color: white;
   font-kerning: none;
   font-size: calc(2vh + 1vmin);
-  padding: 12px 12px;
-  background-color: #faf6ff82;
 }
 
 .ad h1:hover {
@@ -130,9 +157,11 @@ button {
   padding: 1em;
   display: block;
   justify-content: center;
-  background-color: #5880611f;
+  background-color: rgba(255, 255, 255, 0.204);
   border-radius: 12px;
   padding: 20px;
+  font-family: "Fredoka One"
+
 }
 
 fieldset {
@@ -159,6 +188,9 @@ fieldset {
   display: flexbox;
   flex-direction: row-reverse;
   justify-content: space-evenly;
+  background-color: #e7b5ac;
+  padding: 2%;
+  margin: 0% 0% 4% 0%;
 }
 
 .navLink {
@@ -166,12 +198,62 @@ fieldset {
   margin: 0% 1%;
   padding: 0% 2%;
   font-size: 1rem;
-  background: #e7b5ac;
-  color: black;
-  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.256);
+  color: #588061;
+  font-family: "Fredoka One", cursive;
+
+  border-radius: 4px;
 }
 .navLink:hover {
-  color: darkred;
-  background: beige;
-  transition: transform 1500ms, background 1750ms;
+  color: rgba(255, 255, 255, 0.874);
+  outline: black;
+  background: #588061;
+  transition: transform 900ms, background 1550ms   ;
+}
+
+.login-form {
+  margin: 5%;
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  font-family: "Fredoka One", cursive;
+  color: #588061;
+  width: auto;  
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+.text-input{
+  border: 2px solid #58806179;
+  border-radius: 4px;
+  padding: 5px;
+  margin: 5px;
+  font-family: "Fredoka One", cursive ;
+  font-size: 1rem;
+  background-color: #fffffff7;
+  text-align: center;
+}
+
+.login-btn{
+  margin: 5px;
+  padding: 2%;
+  background-color: #e7b5ac;
+  color: rgba(0, 0, 0, 0.656);
+  border-radius: 4px;
+  font-family: "Fredoka One", cursive;
+  border: 0;
+}
+
+.login{
+  position: relative;
+}
+
+.input-value{
+  padding: 0px;
+}
+
+.burger{
+  padding-right: 2px;
+  margin: 0;
 }
