--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   font-family: "Fredoka One", cursive;
   color: #588061;
   margin: 0% 20%;
-  padding: 100px 10px;
+  padding: 50px 10px;
   background-color: #e7b5ac29;
   border-radius: 12px;
 }
@@ -242,6 +242,7 @@ fieldset {
   border-radius: 4px;
   font-family: "Fredoka One", cursive;
   border: 0;
+  cursor: pointer;
 }
 
 .login{
@@ -255,4 +256,11 @@ fieldset {
 .burger{
   padding-right: 2px;
   margin: 0;
+}
+
+.error-msg{
+  color: #f55e5e;
+  font-size: 0.8rem;
+  font-family: "Fredoka One", cursive;  
+  text-align: center;
 }
