--- a/src/App.css
+++ b/src/App.css
@@ -269,3 +269,12 @@ fieldset {
   font-family: "Fredoka One", cursive;  
   text-align: center;
 }
+
+
+
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
