styling improvements and navbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 body {
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif, Geneva, Tahoma, sans-serif;
-	background-color: #e7b5acef;
+	background-color: #e7b5ac;
 }
 
 .App-header {
