--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .App,
 body {
 	text-align: center;
-	font-family: Arial, Helvetica, sans-serif, Geneva, Tahoma, sans-serif;
+	font-family: "Inter", sans-serif;
 	background-color: #e7b5ac;
 }
 
