--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap");
 
 .App,
 body {
 	text-align: center;
-	font-family: "Inter", sans-serif;
+	font-family: "Fredoka";
 	background-color: #e7b5ac;
+	font-weight: 800;
 }
 
 .App-header {
@@ -24,7 +24,7 @@ body {
 	font-weight: 900;
 	min-height: 2vh;
 	font-size: calc(30px + 5vmin);
-	font-family: "Fredoka One", cursive;
+	font-weight: 800;
 	color: #588061;
 	margin: 0% 20%;
 	padding: 50px 10px;
